syntax = "proto3";
package coprocessor;

import "errorpb.proto";
import "kvrpcpb.proto";
import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option java_package = "org.tikv.kvproto";


// [start, end)
message KeyRange {
    bytes start = 1;
    bytes end = 2;
}

message Request {
    kvrpcpb.Context context = 1;
    int64 tp = 2;
    bytes data = 3;
    uint64 start_ts = 7;
    repeated KeyRange ranges = 4;

    // If cache is enabled, TiKV returns cache hit instead of data if
    // its last version matches this `cache_if_match_version`.
    bool is_cache_enabled = 5;
    uint64 cache_if_match_version = 6;
}

message Response {
    bytes data = 1 [(gogoproto.customtype) = "github.com/pingcap/kvproto/pkg/sharedbytes.SharedBytes", (gogoproto.nullable) = false];
    errorpb.Error region_error = 2;
    kvrpcpb.LockInfo locked = 3;
    string other_error = 4;
    KeyRange range = 5;
    kvrpcpb.ExecDetails exec_details = 6;

    bool is_cache_hit = 7;
    uint64 cache_last_version = 8;
}
